Introduce command line arguments for scripts, cleanup

--- a/python/ApproachAngleFlying.ipynb
+++ b/python/ApproachAngleFlying.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.wall_analysis import parse_experiments\n",
+    "from csv_or_wav_parser import parse_experiments\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "import seaborn as sns\n",
     "from utils.simulation import get_df_theory\n",
@@ -188,7 +188,7 @@
     "    df_total = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "except:\n",
-    "    answer = input('Run wall_analysis.py to parse experiments? (y/[n])') or 'n'\n",
+    "    answer = input('Run csv_or_wav_parser.py to parse experiments? (y/[n])') or 'n'\n",
     "    if answer == 'y':\n",
     "        df_total = parse_experiments(exp_name)\n",
     "        pd.to_pickle(df_total, fname)\n",
@@ -648,7 +648,7 @@
     "    print('read', fname)\n",
     "except Exception as e:\n",
     "    print(e)\n",
-    "    answer = input('Run wall_analysis.py to parse experiments? (y/[n])') or 'n'\n",
+    "    answer = input('Run csv_or_wav_parser.py to parse experiments? (y/[n])') or 'n'\n",
     "    if answer == 'y':\n",
     "        df_total = parse_experiments(exp_name)\n",
     "        pd.to_pickle(df_total, fname)\n",
