--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -41,10 +41,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_setup\n",
-    "from plotting_tools import save_fig, FIGSIZE\n",
-    "from geometry import Context\n",
-    "from constants import PLATFORM\n",
+    "from utils.simulation import get_setup\n",
+    "from utils.plotting_tools import save_fig, FIGSIZE\n",
+    "from utils.geometry import Context\n",
+    "from utils.constants import PLATFORM\n",
     "\n",
     "if PLATFORM == \"crazyflie\":\n",
     "    from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
@@ -104,8 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "from data_collector import DataCollector\n",
-    "from generate_df_results import data_collector_from_df\n",
+    "from utils.data_collector import DataCollector\n",
     "\n",
     "data_collector = DataCollector()\n",
     "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr)\n",
@@ -129,10 +128,6 @@
    },
    "outputs": [],
    "source": [
-    "from simulation import get_dist_slice_theory\n",
-    "from copy import deepcopy\n",
-    "from pandas_utils import fill_nans\n",
-    "\n",
     "def plot_slices(slice_exp, slice_the, dist):\n",
     "    fig_f, axs_f = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
     "    fig_f.set_size_inches(2*FIGSIZE, FIGSIZE)\n",
@@ -161,6 +156,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils.pandas_utils import fill_nans\n",
+    "from utils.simulation import get_dist_slice_theory\n",
+    "from copy import deepcopy\n",
+    "\n",
     "for i, f in enumerate(df_freq):\n",
     "        \n",
     "    slice_exp = df_matrix[:, i, :]\n",
@@ -184,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import factor_distance_to_delta\n",
+    "from utils.simulation import factor_distance_to_delta\n",
     "\n",
     "d1 = df_dist[-1] # starting distance of distance slice. \n",
     "rel_movement_cm = df_dist[1]-df_dist[0]\n",
@@ -211,18 +210,18 @@
    },
    "outputs": [],
    "source": [
-    "from inference import get_approach_angle_fft, get_gamma_distribution, get_approach_angle_cost\n",
-    "from plotting_tools import plot_performance, save_fig, titles, linestyles\n",
-    "from estimators import get_estimate, AngleEstimator\n",
-    "from inference import BAD_FREQ_RANGES, PLATFORM\n",
+    "from utils.inference import get_approach_angle_fft, get_gamma_distribution, get_approach_angle_cost\n",
+    "from utils.plotting_tools import plot_performance, save_fig, titles, linestyles\n",
+    "from utils.estimators import get_estimate, AngleEstimator\n",
+    "from utils.inference import BAD_FREQ_RANGES, PLATFORM\n",
     "\n",
-    "plot_slices = False\n",
+    "plot_slices = True\n",
     "gamma_min = 10\n",
     "\n",
     "start_distances_grid = [max(df_dist)+10] #[max(df_dist) + i for i in [0, 10, 20]]\n",
     "gammas_grid = np.arange(gamma_min, 91, step=1)\n",
     "\n",
-    "factor = 2.0 #average #2\n",
+    "factor = 2.0 # correction factor, 2 means we assume colocated\n",
     "gt_gamma = 90 # in degrees\n",
     "\n",
     "fig, ax_total = plt.subplots()\n",
@@ -252,11 +251,12 @@
     "        fig, axs = plt.subplots(1, 2)\n",
     "        fig.set_size_inches(7, 5)\n",
     "    for mic_idx in range(df_matrix.shape[0]):\n",
-    "        d_slice = d_slices[mic_idx]\n",
+    "        d_slice = d_slices[mic_idx] ** 2\n",
     "\n",
     "        if algo == \"bayes\":\n",
     "            ratios, prob_ratios = get_approach_angle_fft(d_slice, f, df_dist,\n",
-    "                                                         n_max=2000, bayes=True, reduced=False, \n",
+    "                                                         n_max=1000, bayes=True, \n",
+    "                                                         reduced=False, \n",
     "                                                         factor=factor)\n",
     "            gammas, prob = get_gamma_distribution(deepcopy(ratios), \n",
     "                                                  deepcopy(prob_ratios))\n",
@@ -303,7 +303,7 @@
     "    gamma = get_estimate(angles, prob)\n",
     "    err_dict[\"all mics\"][i] = gamma - gt_gamma\n",
     "\n",
-    "angles, prob = estimator_all.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
+    "#angles, prob = estimator_all.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
     "angles, prob = estimator_all.get_angle_distribution(mics_left_right=None)\n",
     "ax_total.plot(angles, prob, label=algo)\n",
     "\n",
@@ -340,9 +340,7 @@
    },
    "outputs": [],
    "source": [
-    "from calibration import get_calibration_function_fit\n",
-    "from calibration import get_calibration_function_median\n",
-    "\n",
+    "from utils.calibration import get_calibration_function_median\n",
     "\n",
     "if PLATFORM == \"epuck\":\n",
     "    motors_list = [\"sweep_and_move\"]\n",
@@ -373,8 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_df_theory\n",
-    "from data_collector import normalize_df_matrix\n",
+    "from utils.simulation import get_df_theory\n",
+    "from utils.data_collector import normalize_df_matrix\n",
     "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
     "method_dict = {\n",
@@ -382,14 +380,6 @@
     "    'theoretical': \"\",\n",
     "    'calibration-individual': calib_function_median,\n",
     "    'calibration-global': calib_function_median_one,\n",
-    "    #'calibration-fit': calib_function_fit,\n",
-    "    #'calibration-fit-one': calib_function_fit_one,\n",
-    "    # deprecated:\n",
-    "    #'calibration-online': \"calibration-online\",\n",
-    "    #'standardize': \"standardize\",\n",
-    "    #'zero_mean': \"zero_mean\",\n",
-    "    #'normalize': \"normalize\",\n",
-    "    #'calibration-offline-old': calib_function_old,\n",
     "}\n",
     "\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
@@ -420,7 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_df_matrix, save_fig, titles, add_colorbar\n",
+    "from utils.plotting_tools import plot_df_matrix, save_fig, titles, add_colorbar\n",
     "\n",
     "min_freq = min(df_freq) #3100 #min(df_freq)\n",
     "max_freq = max(df_freq) #5000 #max(df_freq)\n",
@@ -454,7 +444,6 @@
     "        ax.set_xlabel('distance [cm]')\n",
     "    add_colorbar(fig, ax, im)\n",
     "    #save_fig(fig, f\"plots/{fname}_matrices_{normalization}.png\")\n",
-    "    \n",
     "    \n",
     "mic_idx = 1\n",
     "fig, axs = plt.subplots(1, len(method_dict), sharey=True)\n",
@@ -496,10 +485,10 @@
    },
    "outputs": [],
    "source": [
-    "from inference import Inference\n",
-    "from calibration import get_calibration_function_median\n",
-    "from simulation import get_freq_slice_theory\n",
-    "from estimators import DistanceEstimator, get_estimate\n",
+    "from utils.calibration import get_calibration_function_median\n",
+    "from utils.estimators import DistanceEstimator, get_estimate\n",
+    "from utils.inference import Inference\n",
+    "from utils.simulation import get_freq_slice_theory\n",
     "import progressbar\n",
     "\n",
     "EPS = 1e-10  # clip probability distribution at this value\n",
@@ -514,7 +503,7 @@
     "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
     "n_mics = len(chosen_mics)\n",
     "\n",
-    "use_uniform_prior = True # False\n",
+    "use_uniform_prior = True\n",
     "\n",
     "context = Context.get_platform_setup()\n",
     "distances_grid_m = context.get_possible_distances() #np.arange(50) \n",
@@ -531,13 +520,15 @@
     "        p.update(i_d)\n",
     "        for method, normalize_method in method_dict.items():\n",
     "            if method == \"theoretical\":\n",
+    "                # squared:\n",
     "                slice_exp = get_freq_slice_theory(df_freq,\n",
     "                                                  distance,\n",
     "                                                  azimuth_deg=azimuth_deg, \n",
     "                                                  chosen_mics=chosen_mics)\n",
-    "                slice_exp = slice_exp.T # now it's 4x32\n",
+    "                slice_exp = np.sqrt(slice_exp.T) # now it's 4x32\n",
     "                freqs = df_freq\n",
     "            else:\n",
+    "                # non-squared:\n",
     "                slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
     "                    df_freq,\n",
     "                    distance,\n",
@@ -553,7 +544,9 @@
     "                )\n",
     "                \n",
     "                for algo in [\"cost\", \"bayes\"]:\n",
-    "                    distances_here, proba, diff = inf_machine.do_inference(algorithm=algo, mic_idx=i_mic)\n",
+    "                    distances_here, proba, diff = inf_machine.do_inference(\n",
+    "                        algorithm=algo, \n",
+    "                        mic_idx=i_mic)\n",
     "                    d = get_estimate(distances_here, proba)\n",
     "                    err_df.loc[len(err_df), :] = {\n",
     "                        'error': d - distance,\n",
@@ -588,8 +581,7 @@
     "                azimuths_deg=np.arange(360))\n",
     "            a = get_estimate(angles_here, proba)\n",
     "            error = np.diff(\n",
-    "                np.unwrap([a / 180 * np.pi, azimuth_deg / 180 * np.pi\n",
-    "                           ])) * 180 / np.pi\n",
+    "                np.unwrap([a / 180 * np.pi, azimuth_deg / 180 * np.pi])) * 180 / np.pi\n",
     "            err_df.loc[len(err_df), :] = {\n",
     "                'error': error[0],\n",
     "                'mic': 'all',\n",
@@ -608,7 +600,7 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_performance\n",
+    "from utils.plotting_tools import plot_performance\n",
     "\n",
     "fname = f\"{exp_name}_{motors}\"\n",
     "if use_uniform_prior:\n",
@@ -657,9 +649,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from inference import eps_normalize\n",
-    "from simulation import get_freq_slice_theory\n",
-    "from plotting_tools import all_linestyles\n",
+    "from utils.inference import eps_normalize\n",
+    "from utils.simulation import get_freq_slice_theory\n",
+    "from utils.plotting_tools import all_linestyles\n",
     "\n",
     "mic_idx = 1\n",
     "eps = 1e-5\n",
@@ -698,6 +690,8 @@
     "                df_freq,\n",
     "                distance,\n",
     "                mics=chosen_mics)\n",
+    "            slice_exp = np.sqrt(slice_exp)\n",
+    "            \n",
     "            \n",
     "        inf_machine.add_data(slice_exp, df_freq, mics=chosen_mics)\n",
     "        inf_machine.filter_out_freqs()\n",
@@ -832,8 +826,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calibration import fit_distance_slice\n",
-    "from simulation import get_amplitude_function\n",
+    "from utils.calibration import fit_distance_slice\n",
+    "from utils.simulation import get_amplitude_function\n",
     "\n",
     "fname = f'{exp_name}_{motors}'\n",
     "all_distances = data_collector.df.distance.unique()\n",
