--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -62,7 +62,7 @@
     "        IntSlider,\n",
     "    )\n",
     "    import ipywidgets as widgets\n",
-    "    from plotting_tools import save_fig\n",
+    "    from utils.plotting_tools import save_fig\n",
     "\n",
     "    def update_figure(slice_f, slice_d):\n",
     "        fig, axs = plt.subplots(1, 2, sharey=True)\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import generate_room\n",
+    "from utils.simulation import generate_room\n",
     "\n",
     "angles = [0, 20, 90]\n",
     "fig, axs = plt.subplots(1, len(angles), squeeze=False)\n",
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import pcolorfast_custom, save_fig, add_colorbar\n",
+    "from utils.plotting_tools import pcolorfast_custom, save_fig, add_colorbar\n",
     "\n",
     "def add_labels(ax, matrix, xs, ys=None):\n",
     "    if ys is None:\n",
@@ -371,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
+    "from utils.simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
     "\n",
     "azimuth_deg = 20\n",
     "distances_cm = np.arange(10, 50)\n",
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_freq_slice_pyroom, WIDEBAND_FILE, create_wideband_signal\n",
+    "from utils.simulation import get_freq_slice_pyroom, WIDEBAND_FILE, create_wideband_signal\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "mic_idx = 1\n",
@@ -501,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_freq_slice_theory\n",
+    "from utils.simulation import get_freq_slice_theory\n",
     "\n",
     "df_matrix_theo = np.empty((len(frequencies), len(distances)))\n",
     "for j, distance_cm in enumerate(distances):\n",
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import save_fig, add_colorbar\n",
+    "from utils.plotting_tools import save_fig, add_colorbar\n",
     "\n",
     "start_freq = (2000,)\n",
     "start_dist = (30,)\n",
@@ -642,7 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import simulate_distance_estimator\n",
+    "from utils.simulation import simulate_distance_estimator\n",
     "from estimators import get_estimate\n",
     "\n",
     "azimuth_deg = 180\n",
@@ -824,7 +824,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_df_theory_simple\n",
+    "from utils.simulation import get_df_theory_simple\n",
     "nominal_distance = 30\n",
     "nominal_yaw = 0\n",
     "azimuth_deg = 0\n",
@@ -889,7 +889,7 @@
    "outputs": [],
    "source": [
     "from inference import get_approach_angle_fft, get_gamma_distribution\n",
-    "from simulation import factor_distance_to_delta, get_df_theory_simple\n",
+    "from utils.simulation import factor_distance_to_delta, get_df_theory_simple\n",
     "#from context import get_deltas_from_global\n",
     "from geometry import get_deltas_from_global\n",
     "from estimators import get_estimate, AngleEstimator\n",
@@ -1142,7 +1142,7 @@
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
-    "from plotting_tools import save_fig\n",
+    "from utils.plotting_tools import save_fig\n",
     "\n",
     "delta_arr = np.arange(10, 100, step=10)\n",
     "azimuth_arr = np.arange(-180, 180)\n",
@@ -1197,8 +1197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_deltas_from_global\n",
-    "from plotting_tools import save_fig\n",
+    "from utils.simulation import get_deltas_from_global\n",
+    "from utils.plotting_tools import save_fig\n",
     "\n",
     "mic_idx = 3\n",
     "frequencies = np.linspace(1000, 5000, 100)\n",
@@ -1244,13 +1244,13 @@
    "outputs": [],
    "source": [
     "from pandas_utils import filter_by_dict\n",
-    "from plotting_tools import save_fig\n",
+    "from utils.plotting_tools import save_fig\n",
     "\n",
     "# TODO(FD) verify that below holds with a different gain too.\n",
     "\n",
     "def get_cos_amplitudes(distances_cm):\n",
-    "    from simulation import WALL_ABSORPTION, GAIN\n",
-    "    from simulation import get_deltas_from_global\n",
+    "    from utils.simulation import WALL_ABSORPTION, GAIN\n",
+    "    from utils.simulation import get_deltas_from_global\n",
     "    from generate_simulation_results import AZIMUTH_DEG, MIC_IDX\n",
     "    \n",
     "    distances_cm = results_df.distance.unique()\n",
@@ -1308,7 +1308,7 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_error_distance, labels\n",
+    "from utils.plotting_tools import plot_error_distance, labels\n",
     "\n",
     "name = \"amplitude_noise_new\"\n",
     "results_df = pd.read_pickle(f\"results/simulation/{name}.pkl\")\n",
@@ -1470,7 +1470,7 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_error_gamma\n",
+    "from utils.plotting_tools import plot_error_gamma\n",
     "name = \"angle_noiseless_new\"\n",
     "results_df = pd.read_pickle(f\"results/simulation/{name}.pkl\")\n",
     "\n",
