Remove crazyflie-audio dependencies, recover DOA

--- a/python/DoaAnalysis.ipynb
+++ b/python/DoaAnalysis.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "def get_orientations(df, fix='change', slow=True):\n",
-    "    from evaluate_data import integrate_yaw\n",
+    "    from utils.evaluate_data import integrate_yaw\n",
     "    \n",
     "    orientations = df.yaw_deg.values.copy()\n",
     "    orientations[~np.isnan(orientations)] = np.unwrap(\n",
@@ -101,43 +101,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stepper motor results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import read_df, get_positions\n",
-    "from dynamic_analysis import add_pose_to_df\n",
+    "from utils.evaluate_data import read_df, get_positions, add_pose_to_df\n",
     "\n",
-    "distance = None\n",
+    "degree_offset=0\n",
+    "start_idx = 0\n",
+    "appendix = ''\n",
     "\n",
-    "exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
-    "#exp_name = '2020_10_30_dynamic_test'; degree=0; start_idx=0 #degree=90; \n",
-    "#exp_name = '2020_10_30_dynamic_move'; degree=0; start_idx=0\n",
-    "#exp_name = '2020_11_03_sweep_old'; degree=90; start_idx = 20\n",
-    "#exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
-    "\n",
-    "#exp_name = '2020_11_10_buzzer'; degree=45; start_idx = 20\n",
-    "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
-    "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
-    "\n",
-    "#exp_name = '2020_11_12_speaker360'; degree=360; start_idx = 20\n",
-    "#degree_offset = 15 #\n",
-    "\n",
-    "#exp_name = '2020_11_13_speaker360'; degree=360; start_idx = 20\n",
-    "#degree_offset = 230 #\n",
-    "\n",
-    "#exp_name = '2020_11_23_wall2'; degree=360; start_idx = 20; distance=0\n",
-    "#degree_offset = 0 #\n",
+    "exp_name='2021_10_12_doa_stepper'; degree=0; distance=-300; motors=True\n",
+    "#exp_name='2021_10_12_doa_stepper'; degree=0; distance=300; motors=False \n",
+    "#exp_name='2021_10_12_doa_stepper'; degree=-360; distance=15; motors=True; appendix=\"_new4\"\n",
+    "#exp_name='2021_10_12_doa_stepper'; degree=360; distance=15; motors=False; appendix=\"_new\";\n",
     "\n",
     "params = dict(\n",
-    "    distance = distance,\n",
-    "    degree = degree,\n",
-    "    props = False,\n",
-    "    snr = False,\n",
-    "    motors = False,\n",
-    "    source = 'mono4125',\n",
-    "    exp_name = exp_name\n",
+    "    distance=distance,\n",
+    "    degree=degree,\n",
+    "    props=False,\n",
+    "    bin_selection=3,\n",
+    "    motors=motors,\n",
+    "    source='mono3000',\n",
+    "    appendix=appendix,\n",
+    "    exp_name=exp_name\n",
     ")\n",
     "title = f\"motors: {params['motors']}, degree: {params['degree']}\"\n",
     "\n",
@@ -155,27 +150,6 @@
     "plt.title('frequency selection over time')\n",
     "plt.pcolormesh(frequencies_matrix.T)\n",
     "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from evaluate_data import integrate_yaw\n",
-    "csv_file = '../experiments/2020_11_13_speaker360/Yaw-20201113T16-29-16.csv'\n",
-    "df_log = pd.read_csv(csv_file)\n",
-    "print(df_log.head())\n",
-    "\n",
-    "integrated_yaw = integrate_yaw(df_log.Timestamp.values, df_log['gyro.z'].values)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "fig.set_size_inches(10, 5)\n",
-    "plt.plot(df_log.Timestamp, df_log['gyro.z'])\n",
-    "plt.plot(df_log.Timestamp, df_log['stabilizer.yaw'])\n",
-    "plt.plot(df_log.Timestamp, integrated_yaw)\n",
-    "plt.xlim([35000, 70000])"
    ]
   },
   {
@@ -304,7 +278,7 @@
     "    angles = BeamFormer.theta_scan * 180 / np.pi\n",
     "\n",
     "    #plot_times = range(len(times))\n",
-    "    plot_times = times\n",
+    "    plot_times = times * 1e3\n",
     "    ax.pcolormesh(plot_times, angles, raw_heatmap)\n",
     "    ax.plot(plot_times, raw_orientations, **extra_kwargs)\n",
     "    ax.set_ylim(0, 360)\n",
@@ -579,7 +553,7 @@
    "source": [
     "# Plotting (can start here directly!)\n",
     "\n",
-    "## run dynamic_analaysis.py to generate results"
+    "Run generate_doa_results.py to generate results. "
    ]
   },
   {
@@ -592,58 +566,42 @@
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
     "\n",
-    "#dict(exp_name = '2020_10_30_dynamic_test', degree=0, motors=''),\n",
-    "#dict(exp_name = '2020_10_30_dynamic_test', degree=90, motors=''),\n",
-    "#dict(exp_name = '2020_10_30_dynamic_move', degree=0, motors='')\n",
-    "#dict(exp_name = '2020_11_03_sweep', degree=90, motors=''),\n",
-    "#dict(exp_name = '2020_11_03_sweep_old', degree=90, motors=''),\n",
+    "exp_name = '2021_10_12_doa_stepper'\n",
     "\n",
-    "plots = [\n",
-    "    dict(exp_name = '2020_11_10_buzzer'),\n",
-    "]\n",
+    "fname = f'results/doa_analysis_{exp_name}.pkl'\n",
+    "df_results = pd.read_pickle(fname)\n",
+    "print('read', fname)\n",
     "\n",
-    "BeamFormer()\n",
+    "df_raw = df_results.loc[(df_results.exp_name==exp_name)]\n",
+    "keys = ['motors', 'degree', 'combination_n', 'method', 'covariance_averaging']\n",
+    "for values, df_chosen in df_raw.groupby(keys):\n",
+    "    (motors, degree, combination_n, method, averaging) = values\n",
+    "    title_dict = dict(zip(keys, values))\n",
+    "    assert len(df_chosen) == 1, len(df_chosen)\n",
     "\n",
-    "for plot_dict in plots:\n",
-    "    exp_name = plot_dict.get('exp_name')\n",
-    "    fname = f'results/DynamicAnalaysis_{exp_name}.pkl'\n",
-    "    df_results = pd.read_pickle(fname)\n",
-    "    print('read', fname)\n",
-    "    \n",
-    "    df_raw = df_results.loc[(df_results.exp_name==exp_name)]\n",
-    "    for (motors, degree, combination_n, method, averaging), df_chosen in df_raw.groupby(['motors', 'degree', 'combination_n', 'method', 'covariance_averaging']):\n",
-    "        \n",
-    "        assert len(df_chosen) == 1, len(df_chosen)\n",
-    "        \n",
-    "        df_chosen=df_chosen.iloc[0]\n",
-    "        \n",
-    "        if method == 'mvdr':\n",
-    "            continue\n",
-    "        if combination_n == 2:\n",
-    "            continue\n",
+    "    df_chosen=df_chosen.iloc[0]\n",
     "\n",
-    "        plot_dict['motors'] = motors\n",
-    "        plot_dict['degree'] = degree\n",
-    "        plot_dict['combination_n'] = combination_n\n",
-    "        plot_dict['method'] = method\n",
-    "        plot_dict['averaging'] = averaging\n",
+    "    if method == 'mvdr':\n",
+    "        continue\n",
+    "    if combination_n == 2:\n",
+    "        continue\n",
     "\n",
-    "        times = np.arange(df_chosen.raw_heatmap.shape[1])\n",
-    "        angles = BeamFormer.theta_scan * 180 / np.pi\n",
+    "    times = np.arange(df_chosen.raw_heatmap.shape[1])\n",
+    "    angles = BeamFormer.theta_scan * 180 / np.pi\n",
     "\n",
-    "        fig, axs = plt.subplots(1, 3)\n",
-    "        fig.set_size_inches(15, 5)\n",
-    "        axs[0].pcolormesh(times, angles, df_chosen.raw_heatmap)\n",
-    "        axs[0].set_title('raw heatmap')\n",
+    "    fig, axs = plt.subplots(1, 3)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    axs[0].pcolormesh(times, angles, df_chosen.raw_heatmap)\n",
+    "    axs[0].set_title('raw heatmap')\n",
     "\n",
-    "        axs[1].pcolormesh(times, angles, df_chosen.multi_heatmap)\n",
-    "        axs[1].set_title('multi heatmap')\n",
+    "    axs[1].pcolormesh(times, angles, df_chosen.multi_heatmap)\n",
+    "    axs[1].set_title('multi heatmap')\n",
     "\n",
-    "        axs[2].pcolormesh(times, angles, df_chosen.dynamic_heatmap)\n",
-    "        axs[2].set_title('dynamic heatmap')\n",
+    "    axs[2].pcolormesh(times, angles, df_chosen.dynamic_heatmap)\n",
+    "    axs[2].set_title('dynamic heatmap')\n",
     "\n",
-    "        axs[0].set_ylabel('angle [deg]')\n",
-    "        fig.suptitle(plot_dict)"
+    "    axs[0].set_ylabel('angle [deg]')\n",
+    "    fig.suptitle(title_dict)"
    ]
   },
   {
