--- a/python/DoaStudy.ipynb
+++ b/python/DoaStudy.ipynb
@@ -19,7 +19,8 @@
     "%matplotlib inline\n",
     "#%matplotlib notebook\n",
     "\n",
-    "sys.path.append(\"../crazyflie-audio/python/\")"
+    "from utils.plotting_tools import save_fig\n",
+    "from utils.constants import SPEED_OF_SOUND"
    ]
   },
   {
@@ -270,9 +271,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from constants import SPEED_OF_SOUND\n",
-    "from plotting_tools import save_fig\n",
-    "\n",
     "frequency_desired = 1000 # in hz, will be changed to available frequency bin\n",
     "source_distance = 2 # not actually used, since we use farfield assumption\n",
     "signal_noise = 1e-3  # 1e-2\n",
@@ -661,9 +659,7 @@
    "outputs": [],
    "source": [
     "# constants \n",
-    "from constants import SPEED_OF_SOUND\n",
-    "from geometry import Context\n",
-    "from plotting_tools import save_fig\n",
+    "from utils.geometry import Context\n",
     "from generate_doa_results import get_movement\n",
     "\n",
     "frequency_desired = 4000 # in hz, will be changed to available frequency bin\n",
@@ -715,7 +711,6 @@
    "outputs": [],
    "source": [
     "from audio_stack.beam_former import rotate_mics\n",
-    "from plotting_tools import save_fig\n",
     "from generate_doa_results import move_mics, get_noisy_times\n",
     "\n",
     "sources = get_source(gt_angles_deg, degrees=True)\n",
@@ -843,7 +838,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import save_fig\n",
     "from generate_doa_results import move_mics, get_noisy_times\n",
     "np.random.seed(10)\n",
     "\n",
@@ -893,7 +887,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import save_fig\n",
     "from generate_doa_results import move_mics, get_noisy_times\n",
     "np.random.seed(10)\n",
     "\n",
@@ -950,7 +943,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import save_fig\n",
     "from generate_doa_results import move_mics, get_noisy_times\n",
     "\n",
     "frequency_desired = 4000\n",
@@ -1144,7 +1136,7 @@
     "                     values=\"spectrum_delayed\", log=False, labels=[\"mean\"], saveas=\"\",\n",
     "                     xlabel=None, vmax=None, title=None):\n",
     "\n",
-    "    from plotting_tools import pcolorfast_custom, add_colorbar\n",
+    "    from utils.plotting_tools import pcolorfast_custom, add_colorbar\n",
     "\n",
     "    def aggfunc(column, function=np.mean):\n",
     "        values = []\n",
@@ -1222,7 +1214,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import save_fig\n",
     "GT_ANGLE_DEG = [10, 50]\n",
     "fname = 'results/doa_multi.pkl' # was done using angular movement only\n",
     "df = pd.read_pickle(fname)\n",
