--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -397,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calibration import fit_distance_slice\n",
+    "from utils.calibration import fit_distance_slice\n",
     "\n",
     "for chosen_mics in [[0], range(4)]:\n",
     "    exp_data = Hs[:, chosen_mics]\n",
@@ -557,10 +557,10 @@
    },
    "outputs": [],
    "source": [
-    "from inference import get_probability_cost, get_probability_bayes\n",
-    "from constants import SPEED_OF_SOUND\n",
-    "from geometry import get_deltas_from_global\n",
-    "from geometry import get_orthogonal_distance_from_global\n",
+    "from utils.inference import get_probability_cost, get_probability_bayes\n",
+    "from utils.constants import SPEED_OF_SOUND\n",
+    "from utils.geometry import get_deltas_from_global\n",
+    "from utils.geometry import get_orthogonal_distance_from_global\n",
     "\n",
     "min_frequency = 1000\n",
     "max_frequency = 5000\n",
@@ -625,7 +625,6 @@
     "    #save_fig(fig, f\"plots/simulation/study_fslice_distances_{str(sigma_y).replace('.','-')}.pdf\")\n",
     "    \n",
     "    axs[i].set_xlabel(\"frequency [Hz]\")\n",
-    "    print(\"max distance\", d_fft[-1])\n",
     "    #save_fig(fig_all, f\"plots/simulation/study_fslices_{str(sigma_y).replace('.','-')}.pdf\")"
    ]
   },
@@ -643,7 +642,7 @@
    "outputs": [],
    "source": [
     "from utils.simulation import simulate_distance_estimator\n",
-    "from estimators import get_estimate\n",
+    "from utils.estimators import get_estimate\n",
     "\n",
     "azimuth_deg = 180\n",
     "distance_cm = 20\n",
@@ -888,11 +887,10 @@
    },
    "outputs": [],
    "source": [
-    "from inference import get_approach_angle_fft, get_gamma_distribution\n",
+    "from utils.inference import get_approach_angle_fft, get_gamma_distribution\n",
     "from utils.simulation import factor_distance_to_delta, get_df_theory_simple\n",
-    "#from context import get_deltas_from_global\n",
-    "from geometry import get_deltas_from_global\n",
-    "from estimators import get_estimate, AngleEstimator\n",
+    "from utils.geometry import get_deltas_from_global\n",
+    "from utils.estimators import get_estimate, AngleEstimator\n",
     "azimuth_deg = 0\n",
     "n_methods = 2\n",
     "\n",
@@ -977,8 +975,8 @@
    "outputs": [],
    "source": [
     "import itertools\n",
-    "from inference import get_approach_angle_fft, get_approach_angle_cost\n",
-    "from geometry import get_orthogonal_distance_from_global\n",
+    "from utils.inference import get_approach_angle_fft, get_approach_angle_cost\n",
+    "from utils.geometry import get_orthogonal_distance_from_global\n",
     "\n",
     "azimuth_deg = 0\n",
     "mic_idx = 1\n",
@@ -1107,7 +1105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geometry import Context\n",
+    "from utils.geometry import Context\n",
     "\n",
     "d_arr = np.arange(10, 50, step=5) # cm\n",
     "azimuth_arr = np.arange(-180, 180) # deg\n",
@@ -1243,7 +1241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas_utils import filter_by_dict\n",
+    "from utils.pandas_utils import filter_by_dict\n",
     "from utils.plotting_tools import save_fig\n",
     "\n",
     "# TODO(FD) verify that below holds with a different gain too.\n",
@@ -1588,7 +1586,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geometry import *\n",
+    "from utils.geometry import *\n",
     "\n",
     "distance_cm = 200\n",
     "azimuth_deg = 70 #+ mic_idx * 90\n",
@@ -1614,27 +1612,6 @@
     "    np.testing.assert_allclose(distance_est, distance_cm)\n",
     "    assert azimuth_deg in azimuth_est, (azimuth_est, azimuth_deg)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
