Rename experiments to new datasets repository

--- a/python/ApproachAngleFlying.ipynb
+++ b/python/ApproachAngleFlying.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
+    "fname = f'../datasets/{exp_name}/all_data.pkl'\n",
     "\n",
     "try:\n",
     "    df_total = pd.read_pickle(fname)\n",
