--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# get first distance measurement from the chosen datatype. \n",
-    "all_data = pd.read_pickle(f'../experiments/{exp_name}/all_data.pkl')\n",
+    "all_data = pd.read_pickle(f'../datasets/{exp_name}/all_data.pkl')\n",
     "row_idx = 1\n",
     "data = all_data.loc[(all_data.mic_type==mic_type) & \n",
     "                    (all_data.motors==motors) &\n",
