--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -301,7 +301,7 @@
     "for params in plot_dict:\n",
     "    exp_name, motors, appendix = params.values()\n",
     "\n",
-    "    results_df = pd.read_pickle(f\"../experiments/{exp_name}/all_data.pkl\")\n",
+    "    results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "    row = results_df.loc[\n",
     "        (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
     "    ].iloc[0]\n",
@@ -532,7 +532,7 @@
     "\n",
     "#exp_name = '2021_10_12_flying'\n",
     "\n",
-    "fname = f'../experiments/{exp_name}/results.pkl'\n",
+    "fname = f'../datasets/{exp_name}/results.pkl'\n",
     "errors_df = pd.read_pickle(fname)\n",
     "\n",
     "chosen_mics = '[0,1,2,3]'\n",
@@ -722,7 +722,7 @@
    "outputs": [],
    "source": [
     "exp_name = '2021_05_04_flying'; # snr = 3\n",
-    "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
+    "fname = f'../datasets/{exp_name}/all_data.pkl'\n",
     "\n",
     "try:\n",
     "    df_total = pd.read_pickle(fname)\n",
